Half of the page room created and questions fluxogram.

--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -28,3 +28,20 @@
     cursor: not-allowed;
   }
 }
+
+.button-logout {
+  height: 40px;
+  border-radius: 8px;
+  background: #D73754;
+  color: #FFF;
+  padding: 0 30px;
+
+  cursor: pointer;
+  border: 0;
+
+  transition: 0.3s;
+
+  &:hover {
+    filter: brightness(0.85)
+  }
+}
