Hook useRoom created

--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -19,6 +19,12 @@
     margin-right: 8px;
   }
 
+  &.outlined {
+    background: #FFF;
+    border: 1px solid #835afd;
+    color: #835afd;
+  }
+
   &:not(:disabled):hover {
     filter: brightness(0.85);
   }
@@ -26,22 +32,5 @@
   &:disabled {
     opacity: 0.6;
     cursor: not-allowed;
-  }
-}
-
-.button-logout {
-  height: 40px;
-  border-radius: 8px;
-  background: #D73754;
-  color: #FFF;
-  padding: 0 30px;
-
-  cursor: pointer;
-  border: 0;
-
-  transition: 0.3s;
-
-  &:hover {
-    filter: brightness(0.85)
   }
 }
