--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -12,6 +12,20 @@
     color: #29292e;
   }
 
+  
+  &.highlighted {
+    background: #f4f0ff;
+    border: 1px solid #835afd;
+    
+    footer .user-info span {
+      color: #29292e;
+    }
+  }
+  
+  &.answered {
+    background: #DBDCDD;
+  }
+
   footer {
     display: flex;
     justify-content: space-between;
@@ -33,6 +47,11 @@
         color: #737380;
         font-size: 14px;
       }
+    }
+
+    > div {
+      display: flex;
+      gap: 16px;
     }
 
     button {
@@ -57,18 +76,12 @@
         }
       }
 
-      &.delete-question {
-        color: #737380;
-        transition: filter 0.1s;
-      }
-
       &.delete-question:hover {
-        color: #E73F5D;
         filter: invert(61%) sepia(72%) saturate(7207%) hue-rotate(328deg) brightness(95%) contrast(91%);
       }
 
       &:hover {
-        filter: brightness(0.7);
+        filter: invert(42%) sepia(66%) saturate(4814%) hue-rotate(237deg) brightness(102%) contrast(98%);
       }
     }
   }
