--- a/src/pages/RoomPages/styles.scss
+++ b/src/pages/RoomPages/styles.scss
@@ -10,7 +10,7 @@
       justify-content: space-between;
       align-items: center;
 
-      > img {
+      >.logo-img {
         max-height: 45px;
       }
 
@@ -29,6 +29,33 @@
   main {
     max-width: 800px;
     margin: 0 auto;
+
+    .admin-warning {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      margin-top: 54px;
+
+      h1 {
+        font-size: 32px;
+        font-family: 'Poppins', sans-serif;
+      }
+
+      p {
+        font-size: 16px;
+        font-family: 'Poppins', sans-serif;
+        line-height: 24px;
+        margin-top: 8px;
+      }
+
+      >img {
+        width: 500px;
+        height: 500px;
+        margin-top: 54px;
+      }
+    }
 
     .room-title {
       margin: 32px 0 24px;
@@ -108,6 +135,36 @@
 
     .question-list {
       margin-top: 32px;
+
+      .empty-questions {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        img {
+          width: 150px;
+          height: 150px;
+
+          margin-top: 88px;
+        }
+
+        h2 {
+          font-size: 24px;
+          font-family: 'Poppins', sans-serif;
+          margin-top: 32px;
+        }
+
+        p {
+          font-size: 16px;
+          font-family: 'Poppins', sans-serif;
+          margin-top: 16px;
+        }
+
+        p:last-child {
+          margin-top: 0;
+        }
+      }
     }
   }
 }
